[package]
name = "metars"
version = "0.1.0"
authors = ["Nick Mooney <nick@nickmooney.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
roxmltree = "0.13.1"
termion = "1.5.5"